--- a/css/resume.css
+++ b/css/resume.css
@@ -104,7 +104,7 @@ section.resume-section {
     padding-bottom: 3rem !important; } }
 
 .bg-primary {
-  background-color: #BD5D38 !important; }
+  background-image: url('https://i.imgur.com/ZQP0kip.gif'); }
 
 .text-primary {
   color: #BD5D38 !important; }
